--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
+      - name: Move to project folder
+        run: cd '02 Starting Project'
       - name: Install Dependencies
         run: npm ci
       - name: Run Tests
