--- a/.github/workflows/testAndDeploy.yml
+++ b/.github/workflows/testAndDeploy.yml
@@ -1,4 +1,4 @@
-name: Run Tests and Deploy
+name: Run Tests and Deploy 
 on: push
 jobs:
   test:
@@ -15,6 +15,7 @@ jobs:
       - name: Run Tests
         run: npm --prefix './02 Starting Project' test
   deploy:
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Get Code
