--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -10,7 +10,7 @@ jobs:
       - name: output event data
         run: echo "${{toJSON( github.event )}}"
       - name: Get Code
-        uses: actions/checkout@v3`
+        uses: actions/checkout@v3
       - name: Install Dependencies
         run: npm --prefix "./02 Starting Project" ci
       - name: Test Code
