Updated workflows to use  variable

--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -3,6 +3,10 @@ on:
   workflow_dispatch:
   pull_request:
     types: closed
+
+env:
+  NPM_PREFIX: "./02 Starting Project"
+
 jobs:
   Dispatch:
     runs-on: ubuntu-latest
@@ -12,11 +16,11 @@ jobs:
       - name: Get Code
         uses: actions/checkout@v3
       - name: Install Dependencies
-        run: npm --prefix "./02 Starting Project" ci
+        run: npm --prefix $NPM_PREFIX ci
       - name: Test Code
-        run: npm --prefix "./02 Starting Project" run test
+        run: npm --prefix $NPM_PREFIX run test
       - name: Build Code
-        run: npm --prefix "./02 Starting Project" run build
+        run: npm --prefix $NPM_PREFIX run build
       - name: Deploy Project
         run: echo "Deploying...."
       
